Updated for database models

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,10 @@
 
 FROM python:latest
 
+# host.docker.internal -> localhost
+# curl -X POST -d '{"message": "Hello world"}' -H "Content-Type: application/json" http://host.docker.internal:8080/api/chats/
+RUN apt-get update && apt-get install -y curl
+
 # creat python venv to isolate python from system level python
 RUN python -m venv /opt/venv/
 # everything after this line will be in VENV path
