ready for deployment tests

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,6 @@
 API_KEY="ABSC234"
 DATABASE_URL=postgresql+psycopg://dbuser:dbpassword@db_service:5432/mydb
+
+OPENAI_BASE_URL="http://model-runner.docker.internal/engines/v1" # wont use in prod:
+OPENAI_MODEL_NAME="ai/gemma3"
+OPENAI_API_KEY="not-set"
