--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,5 @@ uvicorn[standard]
 requests
 sqlmodel # sqlite mysql postgres 
 psycopg[binary] # v3: postgres with python
+langchain
+langchain-openai
