Full tested API and Agent commit

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,11 @@
 API_KEY="ABSC234"
 DATABASE_URL=postgresql+psycopg://dbuser:dbpassword@db_service:5432/mydb
 
-OPENAI_BASE_URL="http://model-runner.docker.internal/engines/v1" # wont use in prod:
-OPENAI_MODEL_NAME="ai/gemma3"
-OPENAI_API_KEY="not-set"
+#OPENAI_BASE_URL="http://model-runner.docker.internal/engines/v1" # wont use in prod:
+OPENAI_MODEL_NAME="gpt-4o"
+OPENAI_API_KEY="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"
+
+EMAIL_ADRESS="scherl.alessandro@gmail.com"
+EMAIL_PASSWORD="yeln rvfx nxgm mdvi" # never hardcode your own password , use app pw!
+EMAIL_HOST="smtp.gmail.com"
+EMAIL_PORT=465
